--- a/README
+++ b/README
@@ -1,12 +1,27 @@
-You need to have the following installed:
-XCode
-Swig (installed by hand, not using ports)
-android-ndk-r4 in the ../../ directory
-opencv in the ../../ directory, compiled
+# SoundCodr
+SoundCodr is an innovative musical expression and performance system that uses aspects of computer vision, end user programming and audio synthesis to enable users to create and interpret graphical scores using a mobile phone. The user trains the system (a smartphone application) to recognise generic coloured blobs drawn on a whiteboard. The user then defines mappings between blobs and synthesized audio properties. Finally, the system can be used to interpret and perform the graphical score according to the user’s requirements. 
 
-If there are any errors, it's likely due to the MK files
-not being setup properly.
+## Getting up and running
+To get SoundCodr running you need to have the following installed:
+* XCode
+* Swig (installed by hand, not using ports)
+* android-ndk-r4 in the ../../ directory
+* opencv in the ../../ directory, compiled
 
-Application.mk and Android.mk
+If there are any errors, it's likely due to the MK files (Application.mk and Android.mk not being setup properly - in particular, the required platform number in Application.mk.
 
-especially the required platform number in Application.mk
+## Images
+![](https://www.dropbox.com/s/257386iauleegxk/IMG_0451.JPG?raw=1 "")
+
+![](https://www.dropbox.com/s/zfung7lc416zzfq/process.png?raw=1 "")
+
+![](https://www.dropbox.com/s/13um1o20ixvjg30/IMG_0906.JPG?raw=1 "")
+
+![](https://www.dropbox.com/s/qqkpg9plj8ndt5c/IMG_0908.JPG?raw=1 "")
+
+![](https://www.dropbox.com/s/i9yygshbqf1q90r/IMG_0912.JPG?raw=1 "")
+
+![](https://www.dropbox.com/s/0eheh8hh8vqc5jf/invalidgrid.png?raw=1 "")
+
+
+
